fix(reporter): Fix of the vertical alignment of the close btn of the console

--- a/src/cv-console/scss/_console.scss
+++ b/src/cv-console/scss/_console.scss
@@ -86,7 +86,7 @@ a:hover {
   display: inline-block;
 
   &::after {
-    content: "|";
+    content: '|';
     margin-right: 1.145em;
   }
 }
@@ -95,7 +95,6 @@ a:hover {
   @extend %widget-state;
 
   position: relative;
-  bottom: -0.5em;
   border: 0;
   border-radius: var(--cv-radius-round);
   width: 2em;
